Minor comment changes

--- a/TF2.0/01_TF_Using_DataGenerator_and_Custom_Callbacks.ipynb
+++ b/TF2.0/01_TF_Using_DataGenerator_and_Custom_Callbacks.ipynb
@@ -37,6 +37,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d2jsGQYkILWt",
+        "colab_type": "text"
+      },
+      "source": [
+        "NOTE: This notebook is a modified version of assignment notebook from this Coursera course: https://www.coursera.org/learn/introduction-tensorflow/ \n",
+        "\n",
+        "Feel free to check the amazing Deep Learning specialization at coursera.org / deeplearning.ai"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CiQqC3NoWwhh",
@@ -45,7 +57,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 223
         },
-        "outputId": "52e94b75-bd8f-4adf-f1ad-a6dccc5f1fb2"
+        "outputId": "b66c2568-557d-4e88-e376-3af8b329f544"
       },
       "source": [
         "# Get data\n",
@@ -53,13 +65,13 @@
         "    \"https://storage.googleapis.com/laurencemoroney-blog.appspot.com/happy-or-sad.zip\" \\\n",
         "    -O \"/tmp/happy-or-sad.zip\"\n"
       ],
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-08-04 19:15:24--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/happy-or-sad.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.79.128, 2a00:1450:4013:c04::80\n",
+            "--2019-08-04 19:35:57--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/happy-or-sad.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.79.128, 2a00:1450:4013:c05::80\n",
             "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.79.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2670333 (2.5M) [application/zip]\n",
@@ -67,7 +79,7 @@
             "\n",
             "\r/tmp/happy-or-sad.z   0%[                    ]       0  --.-KB/s               \r/tmp/happy-or-sad.z 100%[===================>]   2.55M  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2019-08-04 19:15:24 (185 MB/s) - ‘/tmp/happy-or-sad.zip’ saved [2670333/2670333]\n",
+            "2019-08-04 19:35:58 (214 MB/s) - ‘/tmp/happy-or-sad.zip’ saved [2670333/2670333]\n",
             "\n"
           ],
           "name": "stdout"
@@ -323,14 +335,11 @@
       "metadata": {
         "id": "6DLGbXXI1j_V",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 93
-        },
-        "outputId": "80fd55ed-0927-4a74-e800-26bd37da1c4e"
+        "colab": {}
       },
       "source": [
-        "# This Code Block should Define and Compile the Model\n",
+        "# Define the model\n",
+        "\n",
         "model = tf.keras.models.Sequential([\n",
         "    tf.keras.layers.Conv2D(16, (3, 3), activation = 'relu', input_shape = (150, 150, 3)),\n",
         "    tf.keras.layers.MaxPool2D(2, 2),\n",
@@ -350,23 +359,14 @@
         "])\n",
         "\n",
         "\n",
+        "# Compile\n",
         "\n",
         "model.compile(optimizer = RMSprop(lr = .001), \n",
         "              loss      = 'binary_crossentropy',\n",
         "              metrics   = ['acc'])"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "W0804 19:22:09.697497 140310548252544 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -380,14 +380,14 @@
         "outputId": "dc5406a5-f3f5-4db2-d586-87f6ff6d74b3"
       },
       "source": [
+        "# Create data gen. object\n",
+        "\n",
         "train_datagen = ImageDataGenerator(rescale = 1/255)\n",
         "\n",
         "train_generator = train_datagen.flow_from_directory(r'../tmp/h-or-s/',\n",
         "                                                    target_size = (150, 150),\n",
         "                                                    batch_size  = 128,\n",
-        "                                                    class_mode  = 'binary')\n",
-        "\n",
-        "# Expected output: 'Found 80 images belonging to 2 classes'"
+        "                                                    class_mode  = 'binary')\n"
       ],
       "execution_count": 15,
       "outputs": [
