Comment on  added to example 07

--- a/TF2.0/07_TF2_Timeseries_Data_Prep.ipynb
+++ b/TF2.0/07_TF2_Timeseries_Data_Prep.ipynb
@@ -282,7 +282,8 @@
       },
       "source": [
         "# Shuffle the data\n",
-        "my_data = my_data.shuffle(buffer_size = 10)\n",
+        "my_data = my_data.shuffle(buffer_size = 10)  # `buffer_size` speeds things up with large datasets - it just uses one buffer of\n",
+        "                                             # defined size at the time\n",
         "\n",
         "for x, y in my_data:\n",
         "  print(x.numpy(), y.numpy())"
